# ift4055

./: .gitignore  README.md
docs/: CNAME  ift4055-docs-20a495779befcae5.js  ift4055-docs-20a495779befcae5_bg.wasm  ift4055-docs-2544c61e68f201d3.js  ift4055-docs-2544c61e68f201d3_bg.wasm  ift4055-docs-32cec13c96710055.js  ift4055-docs-32cec13c96710055_bg.wasm  ift4055-docs-4bf52171b5baa9bd.js  ift4055-docs-4bf52171b5baa9bd_bg.wasm  ift4055-docs-66c027f664394ae2.js  ift4055-docs-66c027f664394ae2_bg.wasm  ift4055-docs-7ebd71f5cbae7471.js  ift4055-docs-7ebd71f5cbae7471_bg.wasm  ift4055-docs-823a68d074f27443.js  ift4055-docs-823a68d074f27443_bg.wasm  ift4055-docs-87aa87d36e994200.js  (+35 more)
docs-src/: .gitignore  Cargo.toml  README.md  index.html  release.sh  tailwind.config.js  tailwind.css
docs-src/src/: app.rs  components.rs  lib.rs  locale.rs  main.rs
docs-src/src/components/: pages.rs  utils.rs
docs-src/src/components/pages/: description.rs  planning.rs  progress.rs  sidebar.rs
docs-src/src/components/utils/: empty.rs  event.rs  section.rs  section_switch.rs  social.rs  subsection.rs
src/: acquisition.py  acquisition_env.py  demo_set_transformer.ipynb  demo_surrogate_saasbo.ipynb  gfn_env.py  main.ipynb  pyproject.toml  st_models.py  surrogate.py  testing.ipynb  transformer.py  transformer_models.py  transformer_modules.py  utils.py
src/models/: acq_backward_10p_20240823.torch  acq_forward_10p_20240823.torch  st_nn_l2norm.torch
src/old/: acquisition_gfn.ipynb  pqmass_rl.ipynb  set_transformer_paper.ipynb  simple_gfn.ipynb
src/old/model/: actor.pkl  critic.pkl
(+6 files in other folders)
