[tool.poetry]
name = "function-sampler"
version = "0.1.0"
description = "An intelligent sampler based on RL."
authors = ["etiennecollin <collin.etienne.contact@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
tqdm = "^4.66.4"
seaborn = "^0.13.2"
botorch = "^0.11.3"
notebook = "^7.2.1"
ipywidgets = "^8.1.3"
jupyterlab = "^4.2.4"
jupyter = "^1.0.0"
pqm = "^0.4.0"
jedi-language-server = "^0.41.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
